# projectmodels

./: songreccmodel.py
260225/groq/: app3.py
ai docuquery/groq/: 260225.code-workspace
autoresu/: .env.example  README.md  docker-compose.yml  mongo-init.js  pyproject.toml  requirements.txt  setup_enhanced_features.py
autoresu/backend/: .env.example  Dockerfile
autoresu/backend/app/: main.py
autoresu/backend/app/api/: analytics.py  auth.py  github.py  job.py  resume.py
autoresu/backend/app/config/: database.py  settings.py
autoresu/backend/app/ml/: classifiers.py  embeddings.py  training.py
autoresu/backend/app/models/: job.py  job_match.py  resume.py  skill_gap.py  user.py
autoresu/backend/app/services/: ai_service.py  auth_service.py  github_importer.py  job_matcher.py  quality_scorer.py  resume_builder.py  resume_parser.py  rewriter.py  skill_gap_detector.py
autoresu/backend/app/utils/: exceptions.py  helpers.py  validators.py
autoresu/frontend/: Dockerfile  env.sh  nginx.conf  package.json
form-filler/: app.py
form-filler/extensions/: background.js  content.js  manifest.json  popup.html  popup.js
preventive-healthcare-chatbot/src/models/: embedding.py
test4/: app.py  requirements.txt
test4/backend/: main.py  mongo_logger.py
test4/backend/agents/: detection_agent.py  live_monitor.py  memory.py  motion_agent.py  reminder_agent.py  vision_context_agent.py
test4/frontend/pages/: timeline.py
