[project]
name = "ai-resume"
version = "0.1.0"
description = "AI-powered resume builder with job matching and enhancement capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "motor>=3.3.2",
    "beanie>=1.23.6",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.2",
    "scikit-learn>=1.3.2",
    "transformers>=4.36.0",
    "torch>=2.1.1",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "nltk>=3.8.1",
    "spacy>=3.7.2",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "PyGithub>=1.59.1",
    "pinecone-client>=2.2.4",
    "google-generativeai>=0.3.0",
    "groq>=0.4.1",
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "reportlab>=4.0.7",
    "Pillow>=10.1.0"
]
